--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     -->
 
     <title>ChooseOne</title>
-    <meta name="description" content="'ChooseOne lets you have access to general understandings through user-interactive questions. The more you vote, the more you can influence the results and ,in the long run, can be helpful to people in the world who want to know the results.'" />
+    <meta name="description" content="ChooseOne lets you have access to general understandings through user-interactive questions. The more you vote, the more you can influence the results and ,in the long run, can be helpful to people in the world who want to know the results." />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossOrigin="anonymous" />
     <link rel="stylesheet" href="https://use.typekit.net/wjg1qds.css" />
